# smartCoopScheduler

./: CMakeLists.txt  README.md  cmake_install.cmake  dummy  dummy_sched.c
advanced_sched/: CMakeCache.txt  Makefile  dummy_sched.c  rank_based_sched.c
advanced_sched_test/h-ratio/: README.md  beta v0.1.c  origin.c
advanced_sched_test/rank-based/: README.md  rank_based_sched.c
basic-src/: dummy_sched.c  pi.c
basic-src/testpi/: CMakeLists.txt  pi.c
test-pi/: CMakeLists.txt  README.md  pi.c  pi_bak.c  pi_kernel.cu
